k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
spec:
  selector:
    app: devops-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
